test/classes/bradc/setterForField.good
myC is: {x = 2}
myC is: {x = 3}
myC is: {x = setterForField.chpl:6: error: halt reached - x accessed when negative
